--- a/crud-module/templates/client/views/_.form.client.view.html
+++ b/crud-module/templates/client/views/_.form.client.view.html
@@ -1,19 +1,24 @@
 <section>
   <div class="page-header">
-    <h1>{{vm.<%= slugifiedSingularName %>._id ? 'Edit <%= humanizedSingularName %>' : 'New <%= humanizedSingularName %>'}}</h1>
+    <h1 ng-if="vm.<%= slugifiedSingularName %>._id">{{'Edit <%= humanizedSingularName %>'|translate}}</h1>
+    <h1 ng-if="!vm.<%= slugifiedSingularName %>._id">{{'New <%= humanizedSingularName %>'|translate}}</h1>
   </div>
   <div class="col-md-12">
     <form name="vm.form.<%= slugifiedSingularName %>Form" class="form-horizontal" ng-submit="vm.save(vm.form.<%= slugifiedSingularName %>Form.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
-          <label class="control-label" for="name">Name</label>
-          <input name="name" type="text" ng-model="vm.<%= slugifiedSingularName %>.name" id="name" class="form-control" placeholder="Name" required>
+          <label class="control-label" for="name">{{'Name'|translate}}</label>
+          <input name="name" type="text" ng-model="vm.<%= slugifiedSingularName %>.name" id="name" class="form-control" placeholder="{{'Name'|translate}}" required>
+
           <div ng-messages="vm.form.<%= slugifiedSingularName %>Form.name.$error" role="alert">
-            <p class="help-block error-text" ng-message="required"><%= humanizedSingularName %> name is required.</p>
+            <p class="help-block error-text" ng-message="required">{{'<%= humanizedSingularName %> name is required.'|translate}}</p>
           </div>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-default">{{vm.<%= slugifiedSingularName %>._id ? 'Update' : 'Create'}}</button>
+          <button type="submit" class="btn btn-default">
+            <translate ng-if="vm.<%= slugifiedSingularName %>._id">Update</translate>
+            <translate ng-if="!vm.<%= slugifiedSingularName %>._id">Create</translate>
+          </button>
         </div>
         <div ng-show="vm.error" class="text-danger">
           <strong ng-bind="vm.error"></strong>
